# PointCloudMaterialEstimation

./: .gitignore  CMakeLists.txt  FakeIntensityPCPointMaterialBuilder.cpp  FakeIntensityPCPointMaterialBuilder.h  MockIntensityNoCorrectionPCPointMaterialBuilder.cpp  MockIntensityNoCorrectionPCPointMaterialBuilder.h  MockIntensityPCPointMaterialBuilder.cpp  MockIntensityPCPointMaterialBuilder.h  PCNormal.cpp  PCNormal.h  PCPointMaterial.cpp  PCPointMaterial.h  PCPointMaterialBuilder.cpp  PCPointMaterialBuilder.h  PCPointMaterialDirector.cpp  PCPointMaterialDirector.h  PCReader.cpp  PCReader.h  PCViewer.cpp  PCViewer.h  PointXYZRGBMaterial.h  README.md  SimpleFakeIntensityPCPointMaterialBuilder.cpp  SimpleFakeIntensityPCPointMaterialBuilder.h  SimplePCPointMaterialBuilder.cpp  SimplePCPointMaterialBuilder.h  Vector3.cpp  Vector3.hpp  main.cpp
sample pcd files/Ceramic bowls/: bowl_purple.pcd  bowl_red.pcd  mug_green.pcd
sample pcd files/Ceramic plates/: plate_beige_c.pcd  plate_blue_c.pcd  plate_white_c.pcd
sample pcd files/plastic/: plastic_basket.pcd  plastic_cooker.pcd  plastic_jar.pcd
sample pcd files/same color dif material/: cushion.pcd  metal_plate.pcd  plastic_jar_no_lid.pcd
sample pcd files/wood/: wood_bat.pcd  wood_cutboard_c.pcd  wood_saltshaker.pcd
